# internal/mods/cloud/schema/cloud.go
@@ -15,8 +15,9 @@ type Cloud struct {
 	IDX       string    `json:"idx" gorm:"size:64;"`           // IDX
 	Source    string    `json:"source" gorm:"size:255;"`       // Source
 	URL       string    `json:"url" gorm:"size:255;"`          // URL
-	Remark    string    `json:"remark" gorm:"size:1024;"`      // Remark
+	FileMeta  string    `json:"file_meta" gorm:"size:1024;"`   // Meta
 	Size      int64     `json:"size" gorm:"size:20;"`          // Size
+	OSS       string    `json:"oss" gorm:"size:255;"`          // OSS
 	CreatedAt time.Time `json:"created_at" gorm:"index;"`      // Create time
 	UpdatedAt time.Time `json:"updated_at" gorm:"index;"`      // Update time
 }
@@ -24,6 +25,8 @@ type Cloud struct {
 // CloudQueryParam Defining the query parameters for the `Cloud` struct.
 type CloudQueryParam struct {
 	util.PaginationParam
+
+	Name string `form:"name"` // Name
 }
 
 // CloudQueryOptions Defining the query options for the `Cloud` struct.
@@ -42,14 +45,15 @@ type Clouds []*Cloud
 
 // CloudForm Defining the data structure for creating a `Cloud` struct.
 type CloudForm struct {
-	Name   string `form:"name" binding:"required"`   // Name
-	BTIH   string `form:"btih" binding:"required"`   // BTIH
-	IDX    string `form:"idx" binding:"required"`    // IDX
-	Source string `form:"source"`                    // Source
-	URL    string `form:"url"`                       // URL
-	Size   int64  `form:"size" binding:"required"`   // Size
-	Remark string `form:"remark"`                    // Remark
-	RawID  string `form:"raw_id" binding:"required"` // Raw ID
+	Name     string `form:"name" binding:"required"`      // Name
+	BTIH     string `form:"btih" binding:"required"`      // BTIH
+	IDX      string `form:"idx" binding:"required"`       // IDX
+	Source   string `form:"source"`                       // Source
+	URL      string `form:"url"`                          // URL
+	Size     int64  `form:"size" binding:"required"`      // Size
+	FileMeta string `form:"file_meta" binding:"required"` // Meta
+	OSS      string `form:"oss"`                          // OSS
+	RawID    string `form:"raw_id" binding:"required"`    // Raw ID
 }
 
 // Validate A validation function for the `CloudForm` struct.
@@ -66,8 +70,9 @@ func (a *CloudForm) FillTo(cloud *Cloud) error {
 	cloud.Source = a.Source
 	cloud.URL = a.URL
 	cloud.Size = a.Size
-	cloud.Remark = a.Remark
+	cloud.FileMeta = a.FileMeta
 	cloud.RawID = a.RawID
+	cloud.OSS = a.OSS
 
 	return nil
 }
